[package]
name = "hdbscan"
version = "0.10.0"
edition = "2021"
authors = [ "Tom Whitehead <t.j.whitehead21@gmail.com>", ]
description = "HDBSCAN clustering in pure Rust. A huge improvement on DBSCAN, capable of identifying clusters of varying densities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/tom-whitehead/hdbscan"
readme = "README.md"
keywords = ["machine-learning", "clustering", "ai", "ml", "dbscan"]
categories = ["algorithms", "mathematics", "science"]

[dependencies]
num-traits = "0.2.18"
kdtree = "0.7.0"